--- a/package.json
+++ b/package.json
@@ -3,23 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "NODE_ENV=stg vue-cli-service serve",
+    "serve": "vue-cli-service serve --mode stg",
+    "p2020": "vue-cli-service build  --target lib --formats umd-min --name p2020 --dest dist/p2020 src/components/Post2020Graph/index.vue",
+    "p2020Demo": "vue-cli-service build  --target lib --formats umd-min --name p2020Demo --dest dist/p2020Demo src/main.js",
     "bv": "vue-cli-service build  --target lib --formats umd-min --name actionView --dest dist/aaview src/components/AAView/index.vue",
     "bf": "vue-cli-service build  --target lib --formats umd-min --name actionForm --dest dist/aaform src/components/AAForm/index.vue",
     "bl": "vue-cli-service build  --target lib --formats umd-min --name actionList --dest dist/aalist src/components/AAList/index.vue",
+    "bd": "vue-cli-service build  --target lib --formats umd-min --name actionDemo --dest dist/demo src/main.js",
+    "b": "NODE_ENV=stg vue-cli-service build",
     "build": "yarn bf && yarn bl && yarn bv",
-    "deploy": "sh ./scripts/deploy.sh",
+    "deploy~~": "sh ./scripts/deploy.sh",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e --config watchForFileChanges=true"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.4.10",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "humanparser": "^1.10.0",
     "localforage": "^1.7.3",
     "lodash.clone": "^4.5.0",
     "lodash.compact": "^3.0.1",
     "lodash.isempty": "^4.4.0",
     "lodash.isnil": "^4.0.0",
+    "lodash.isobject": "^3.0.2",
     "lodash.omitby": "^4.6.0",
     "vee-validate": "^2.1.7",
     "vue": "^2.6.6",
