--- a/.env.stg
+++ b/.env.stg
@@ -1,3 +1,3 @@
 NODE_ENV=stg
-VUE_APP_API=http://localhost:8000/api
+VUE_APP_API=https://api.stagiung.cbd.int/api
 VUE_APP_ACCOUNTS_URL=https://accounts.staging.cbd.int
