--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue-upload-component": "^2.8.19"
   },
   "devDependencies": {
+    "@starptech/prettyhtml": "^0.9.0",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-e2e-cypress": "^3.4.0",
     "@vue/cli-plugin-eslint": "^3.4.0",
