--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@amcharts/amcharts4": "^4.4.10",
-    "axios": "^0.18.0",
+    "axios": "0.19.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "humanparser": "^1.10.0",
     "localforage": "^1.7.3",
@@ -30,12 +30,14 @@
     "lodash.omitby": "^4.6.0",
     "vee-validate": "^2.1.7",
     "vue": "^2.6.6",
+    "vue-i18n": "^8.11.2",
     "vue-multiselect": "^2.1.3",
     "vue-recaptcha-v3": "^1.4.0",
     "vue-router": "^3.0.2",
     "vue-upload-component": "^2.8.19"
   },
   "devDependencies": {
+    "@kazupon/vue-i18n-loader": "^0.3.0",
     "@starptech/prettyhtml": "^0.9.0",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-e2e-cypress": "^3.4.0",
