--- a/.env.production
+++ b/.env.production
@@ -3,4 +3,4 @@ VUE_APP_API=https://api.cbd.int/api
 VUE_APP_ACCOUNTS_URL=https://accounts.cbd.int
 VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=en
-VUE_APP_DEBUG=true
+VUE_APP_DEBUG=false
