--- a/package.json
+++ b/package.json
@@ -8,18 +8,22 @@
     "p2020": "vue-cli-service build  --target lib --formats umd-min --name p2020 --dest dist/p2020 src/components/Post2020Graph/index.vue",
     "p2020Demo": "vue-cli-service build  --target lib --formats umd-min --name p2020Demo --dest dist/p2020Demo src/main.js",
     "bv": "vue-cli-service build  --target lib --formats umd-min --name actionView --dest dist/aaview src/components/AAView/index.vue",
-    "bf": "vue-cli-service build  --target lib --formats umd-min --name actionForm --dest dist/aaform src/components/AAForm/index.vue",
     "bl": "vue-cli-service build  --target lib --formats umd-min --name actionList --dest dist/aalist src/components/AAList/index.vue",
     "bd": "vue-cli-service build  --target lib --formats umd-min --name actionDemo --dest dist/demo src/main.js",
-    "b": "NODE_ENV=stg vue-cli-service build",
-    "build": "yarn bf && yarn bl && yarn bv",
-    "deploy~~": "sh ./scripts/deploy.sh",
-    "lint": "vue-cli-service lint",
-    "test:e2e": "vue-cli-service test:e2e --config watchForFileChanges=true"
+    "test:e2e": "vue-cli-service test:e2e --config watchForFileChanges=true",
+    "bf:stg": "NODE_ENV=stg vue-cli-service build  --mode stg --target lib --formats umd-min --name actionForm --dest dist/aaform src/components/AAForm/index.vue",
+    "bf:production": "yarn bf",
+    "bf": "rm -rf dist && NODE_ENV=production vue-cli-service build --mode production --target lib --formats umd-min --name actionForm --dest dist/aaform src/components/AAForm/index.vue",
+    "demo": "NODE_ENV=stg vue-cli-service build --mode stg",
+    "demo:stg": "NODE_ENV=stg vue-cli-service build --mode stg",
+    "demo:production": "NODE_ENV=stg vue-cli-service build --mode production",
+    "deploy:af:stg": "NODE_ENV=stg sh scripts/af.sh",
+    "deploy:af": "NODE_ENV=production sh scripts/af.sh",
+    "deploy:demo": "NODE_ENV=stg sh scripts/demo.sh",
+    "deploy:demo:prod": "NODE_ENV=production sh scripts/demo.sh"
   },
   "dependencies": {
     "axios": "0.19.0",
-    "bootstrap-vue": "^2.0.0-rc.11",
     "humanparser": "^1.10.0",
     "localforage": "^1.7.3",
     "lodash.clone": "^4.5.0",
@@ -35,8 +39,6 @@
     "@kazupon/vue-i18n-loader": "^0.3.0",
     "@starptech/prettyhtml": "^0.9.0",
     "@vue/cli-plugin-babel": "^3.4.0",
-    "@vue/cli-plugin-e2e-cypress": "^3.4.0",
-    "@vue/cli-plugin-eslint": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
