--- a/.env.stg
+++ b/.env.stg
@@ -1,5 +1,6 @@
 NODE_ENV=stg
-VUE_APP_API=https://api.stagiung.cbd.int/api
+VUE_APP_API=https://api.staging.cbd.int/api
 VUE_APP_ACCOUNTS_URL=https://accounts.staging.cbd.int
 VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=en
+VUE_APP_DEBUG=
