--- a/.env.production
+++ b/.env.production
@@ -3,3 +3,4 @@ VUE_APP_API=https://api.cbd.int/api
 VUE_APP_ACCOUNTS_URL=https://accounts.cbd.int
 VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=en
+VUE_APP_G_CAPTCHA_KEY=6Lfj3pQUAAAAAKszUI1k4i9AceoyRNUd2G7tw74Y
