--- a/.env.stg
+++ b/.env.stg
@@ -3,4 +3,6 @@ VUE_APP_API=https://api.staging.cbd.int/api
 VUE_APP_ACCOUNTS_URL=https://accounts.staging.cbd.int
 VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=en
-VUE_APP_DEBUG=
+VUE_APP_G_CAPTCHA_KEY=6Lfj3pQUAAAAAKszUI1k4i9AceoyRNUd2G7tw74Y
+VUE_APP_BROWSER_CONSOLE_LOG_LEVEL=debug
+VUE_APP_DEBUG=true
