--- a/package.json
+++ b/package.json
@@ -1,39 +1,52 @@
 {
   "name": "action-agenda-components",
-  "version": "0.1.0",
+  "version": "0.1.11",
   "private": true,
   "scripts": {
     "stg": "vue-cli-service serve --mode stg",
     "prod": "vue-cli-service serve --mode production",
     "p2020": "vue-cli-service build  --target lib --formats umd-min --name p2020 --dest dist/p2020 src/components/Post2020Graph/index.vue",
     "p2020Demo": "vue-cli-service build  --target lib --formats umd-min --name p2020Demo --dest dist/p2020Demo src/main.js",
-    "bv": "vue-cli-service build  --target lib --formats umd-min --name actionView --dest dist/aaview src/components/AAView/index.vue",
-    "bl": "vue-cli-service build  --target lib --formats umd-min --name actionList --dest dist/aalist src/components/AAList/index.vue",
-    "bd": "vue-cli-service build  --target lib --formats umd-min --name actionDemo --dest dist/demo src/main.js",
-    "test:e2e": "vue-cli-service test:e2e --config watchForFileChanges=true",
-    "bf:stg": "NODE_ENV=stg vue-cli-service build  --mode stg --target lib --formats umd-min --name actionForm --dest dist/aaform src/components/AAForm/index.vue",
-    "bf:production": "yarn bf",
-    "bf": "rm -rf dist && NODE_ENV=production vue-cli-service build --mode production --target lib --formats umd-min --name actionForm --dest dist/aaform src/components/AAForm/index.vue",
+    "build:view:stg": "rm -rf dist && NODE_ENV=stg vue-cli-service build  --target lib --formats umd-min --name actionView --dest dist/aaview src/components/AAView/index.vue",
+    "build:view:production": "rm -rf dist && NODE_ENV=production vue-cli-service build  --target lib --formats umd-min --name actionView --dest dist/aaview src/components/AAView/index.vue",
+    "build:view": "yarn build:view:production",
+    "build:list": "rm -rf dist && NODE_ENV=production vue-cli-service build  --target lib --formats umd-min --name actionList --dest dist/aalist src/components/AAList/index.vue",
+    "build:list:stg": "rm -rf dist && NODE_ENV=stg vue-cli-service build  --target lib --formats umd-min --name actionList --dest dist/aalist src/components/AAList/index.vue",
+    "build:list:production": "yarn build:list",
+    "build:form:stg": "NODE_ENV=stg vue-cli-service build  --mode stg --target lib --formats umd-min --name actionForm --dest dist/aaform src/components/AAForm/index.vue",
+    "build:form:production": "yarn bf",
+    "build:form": "rm -rf dist && NODE_ENV=production vue-cli-service build --mode production --target lib --formats umd-min --name actionForm --dest dist/aaform src/components/AAForm/index.vue",
     "demo": "NODE_ENV=stg vue-cli-service build --mode stg",
-    "demo:stg": "NODE_ENV=stg vue-cli-service build --mode stg",
-    "demo:production": "NODE_ENV=stg vue-cli-service build --mode production",
-    "deploy:af:stg": "NODE_ENV=stg sh scripts/af.sh",
-    "deploy:af": "NODE_ENV=production sh scripts/af.sh",
+    "deploy:form:stg": "NODE_ENV=stg sh scripts/form.sh",
+    "deploy:form": "NODE_ENV=production sh scripts/form.sh",
+    "deploy:list": "NODE_ENV=production sh scripts/list.sh",
     "deploy:demo": "NODE_ENV=stg sh scripts/demo.sh",
-    "deploy:demo:prod": "NODE_ENV=production sh scripts/demo.sh"
+    "deploy:demo:prod": "NODE_ENV=production sh scripts/demo.sh",
+    "deploy:view": "NODE_ENV=production sh scripts/view.sh",
+    "test:e2e": "vue-cli-service test:e2e --config watchForFileChanges=true"
   },
   "dependencies": {
+    "@babel/plugin-transform-classes": "^7.5.5",
+    "@babel/polyfill": "^7.4.4",
     "axios": "0.19.0",
+    "change-case": "^3.1.0",
+    "fast-safe-stringify": "^2.0.6",
     "humanparser": "^1.10.0",
     "localforage": "^1.7.3",
     "lodash.clone": "^4.5.0",
+    "lodash.isempty": "^4.4.0",
+    "setimmediate": "^1.0.5",
+    "url-search-params-polyfill": "^7.0.0",
     "vee-validate": "^2.1.7",
     "vue": "^2.6.6",
     "vue-i18n": "^8.11.2",
     "vue-multiselect": "^2.1.3",
     "vue-recaptcha-v3": "^1.4.0",
     "vue-router": "^3.0.2",
-    "vue-upload-component": "^2.8.19"
+    "vue-upload-component": "^2.8.19",
+    "winston": "^3.2.1",
+    "winston-transport": "^4.3.0",
+    "winston-transport-browserconsole": "^1.0.1"
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
@@ -76,10 +89,5 @@
     "plugins": {
       "autoprefixer": {}
     }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  }
 }
