--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.13",
   "private": true,
   "scripts": {
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
     "stg": "vue-cli-service serve --mode stg",
     "prod": "vue-cli-service serve --mode production",
     "build:view:stg": "rm -rf dist && NODE_ENV=stg vue-cli-service build  --target lib --formats umd-min --name actionView --dest dist/aaview src/components/AAView/index.vue",
@@ -38,6 +40,7 @@
     "vue": "^2.6.6",
     "vue-i18n": "^8.11.2",
     "vue-multiselect": "^2.1.3",
+    "vue-particles": "^1.0.9",
     "vue-recaptcha-v3": "^1.4.0",
     "vue-router": "^3.0.2",
     "vue-upload-component": "^2.8.19",
@@ -53,7 +56,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.6"
+    "vue-template-compiler": "^2.6.6",
+    "vuepress": "^1.3.1"
   },
   "eslintConfig": {
     "root": true,
