--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "deploy:list": "NODE_ENV=production sh scripts/list.sh",
     "deploy:demo": "NODE_ENV=stg sh scripts/demo.sh",
     "deploy:demo:prod": "NODE_ENV=production sh scripts/demo.sh",
-    "deploy:view": "NODE_ENV=production sh scripts/view.sh"
+    "deploy:view": "NODE_ENV=production sh scripts/view.sh",
+    "clean-reinstall": "if test -f yarn.lock; then rm yarn.lock; fi && if test -f node_modules; then rm -rf node_modules; fi && yarn install --force"
   },
   "dependencies": {
     "@babel/plugin-transform-classes": "^7.5.5",
