--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/polyfill": "^7.4.4",
     "axios": "0.19.0",
     "change-case": "^3.1.0",
+    "consola": "^2.11.3",
     "fast-safe-stringify": "^2.0.6",
     "humanparser": "^1.10.0",
     "localforage": "^1.7.3",
