--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.2.0",
   "license": "MIT",
   "private": "true",
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "docs:dev": "vuepress dev docs",
@@ -14,21 +16,22 @@
   },
   "dependencies": {
     "lerna": "^3.22.1",
-    "vue-i18n": "^8.11.2"
+    "vue-i18n": "^8.11.2",
+    "vue-particles": "^1.0.9"
   },
   "devDependencies": {
-    "vuepress": "^1.3.1",
     "@scbd/dist-builder": "^0.0.5",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-e2e-cypress": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
+    "core-js": "^3.6.5",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "vue": "^2.6.11",
     "vue-template-compiler": "^2.6.11",
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vuepress": "^1.3.1"
   },
   "readme": "https://github.com/scbd/ecosystem/tree/master/packages/action-agenda-components#readme",
   "author": "Secretariat of the Convention on Biological Diversity <it@cbd.int>",
@@ -40,18 +43,24 @@
   "module": "dist/esm/index.min.js",
   "jsnext:main": "dist/esm/index.min.js",
   "src": "src/index.js",
-  "files": ["dist/*", "src/*"],
+  "files": [
+    "dist/*",
+    "src/*"
+  ],
   "browser": {
     "./umd": "dist/legacy/umd/index.umd.min.js",
     "./browser": "dist/browser/index.min.js",
     "./": "dist/browser/index.min.js"
   },
   "exports": {
-    ".": [{
-      "import": "./dist/esm/index.js",
-      "require": "./dist/legacy/cjs/index.common.cjs",
-      "default": "./dist/esm/index.js"
-    }, "./dist/legacy/umd/index.umd.min.js"]
+    ".": [
+      {
+        "import": "./dist/esm/index.js",
+        "require": "./dist/legacy/cjs/index.common.cjs",
+        "default": "./dist/esm/index.js"
+      },
+      "./dist/legacy/umd/index.umd.min.js"
+    ]
   },
   "repository": {
     "type": "git",
