--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -31,7 +31,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/scbd/ecosystem.git",
+    "url": "https://github.com/scbd/action-agenda-components.git",
     "directory": "packages/search"
   },
   "files": [
