--- a/packages/view/package.json
+++ b/packages/view/package.json
@@ -34,7 +34,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/scbd/ecosystem.git",
+    "url": "git+https://github.com/scbd/action-agenda-components.git",
     "directory": "packages/action-agenda-view"
   },
   "scripts": {
