--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vue": "2.6.11",
     "vue-template-compiler": "2.6.11",
     "vuepress": "~1.6.0",
-    "vue-server-renderer": "2.6.11"
+    "vue-server-renderer": "2.6.11",
+    "prismjs": "1.21.0"
   }
 }
