--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     "vue-template-compiler": "2.6.11",
     "vuepress": "~1.6.0",
     "vue-server-renderer": "2.6.11",
-    "prismjs": "1.21.0"
+    "prismjs": "1.21.0",
+    "@houlagins/dist-builder": "~1.0.7",
+    "vue-i18n":"8.21.1",
+    "@scbd/sso-vue-plugin-scbd": "1.0.4",
+    "@scbd/www-css": "~1.0.1"
   }
 }
