--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@houlagins/dist-builder": "~1.0.9",
     "vue-i18n":"8.21.1",
     "@scbd/sso-vue-plugin-scbd": "1.0.4",
-    "@scbd/www-css": "~1.0.1"
+    "@scbd/www-css": "~1.0.1",
+    "@amcharts/amcharts4": "^4.10.5"
   }
 }
