--- a/packages/components/v2/api/package.json
+++ b/packages/components/v2/api/package.json
@@ -2,18 +2,19 @@
   "name": "@action-agenda/api",
   "version": "2.0.0-alpha.0",
   "scripts": {
-    "dev": "NODE_ENV=dev nodemon --trace-warnings --ignore 'src/components/mongo/*' src/index.mjs ",
+    "dev": "NODE_ENV=dev nodemon --trace-warnings  src/index.mjs ",
     "serve": "NODE_ENV=dev node --trace-warnings  src/index.mjs ",
     "build": "dist-builder",
     "test:e2e": "vue-cli-service test:e2e",
+    "cypress:open": "./node_modules/.bin/cypress open",
     "lint": "vue-cli-service lint",
     "mongo": "docker-compose -f scripts/docker-compose.yml up -d",
     "import-test-data": "sh scripts/import-test-data.sh"
   },
   "dependencies": {
     "@action-agenda/schema": "2.0.0-alpha.4",
-    "@houlagins/default-options": "^1.0.1",
-    "@houlagins/schema-dot-organizer": "1.0.0-alpha.8",
+    "@houlagins/default-options": "^1.0.2",
+    "@houlagins/schema-dot-organizer": "1.0.1-beta.0",
     "ajv": "^6.12.6",
     "ajv-merge-patch": "^4.1.0",
     "body-parser": "^1.19.0",
@@ -23,6 +24,7 @@
     "consola": "^2.15.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
+    "cypress": "^6.5.0",
     "diacritics": "^1.3.0",
     "express": "^4.17.1",
     "express-locale": "^2.0.0",
