--- a/packages/partners/scbd/package.json
+++ b/packages/partners/scbd/package.json
@@ -1,37 +1,37 @@
 {
   "name": "@action-agenda/scbd",
-  "version": "2.0.0-alpha.0",
+  "version": "2.0.0-beta.0",
   "type": "module",
+  "description": "https://github.com/scbd/action-agenda-network/tree/master/src/partners/scbd#index",
+  "readme": "https://github.com/scbd/action-agenda-network/tree/master/src/partners/scbd#index", 
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "DEV=true sdo generateCustomVocab && DEV=true sdo init && DEV=true sdo generate && DEBUG=true dist-builder && DEV=true sdo toDist",
-    "release": "yarn publish --access=public --tag alpha --tag latest",
-    "clean": "sh scripts/clean.sh"
+    "build": "DEV=true sdo build && dist-builder && DEV=true sdo toDist",
+    "release": "yarn publish --access=public --tag beta --tag latest",
+    "clean:reinstall": "if test -f yarn.lock; then rm yarn.lock; fi && if test -d node_modules; then rm -rf node_modules; fi && yarn --exact --force"
   },
   "dependencies": {
-    "@action-agenda/default-config": "^2.0.0-beta.0",
-    "@houlagins/schema-dot-organizer": "^1.0.0-beta",
-    "core-js": "^3.6.5",
+    "@action-agenda/default-config": "^2.0.0-beta.1",
+    "@houlagins/schema-dot-organizer": "^1.0.1-beta.0",
+    "core-js": "3.9.0",
     "vue": "2.6.11"
   },
   "devDependencies": {
     "@houlagins/dist-builder": "~1.0.11",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-e2e-cypress": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "@vue/cli-plugin-babel": "4.5.11",
+    "@vue/cli-plugin-e2e-cypress": "4.5.11",
+    "@vue/cli-plugin-eslint": "4.5.11",
+    "@vue/cli-service": "4.5.11",
+    "babel-eslint": "10.1.0",
+    "eslint": "7.20.0",
+    "eslint-plugin-vue": "7.6.0",
     "vue-template-compiler": "2.6.11"
   },
-  "readme": "ERROR: No README data found!",
   "license": "MIT",
   "main": "dist/esm/index.mjs",
-  "web": "dist/browser/index.min.js",
-  "umd": "dist/legacy/umd/index.umd.min.js",
-  "unpkg": "dist/browser/index.min.js",
-  "jsdelivr": "dist/browser/index.min.js",
+  "web": "dist/esm/index.min.mjs",
+  "unpkg": "dist/esm/index.min.mjs",
+  "jsdelivr": "dist/esm/index.min.mjs",
   "module": "dist/esm/index.min.mjs",
   "jsnext:main": "dist/esm/index.min.mjs",
   "src": "src/index.js",
@@ -40,18 +40,14 @@
     "src/*"
   ],
   "browser": {
-    "./umd": "dist/legacy/umd/index.umd.min.js",
-    "./browser": "dist/browser/index.min.js",
-    "./": "dist/browser/index.min.js"
+    "./": "dist/esm/index.min.mj"
   },
   "exports": {
     ".": [
       {
         "import": "./dist/esm/index.mjs",
-        "require": "./dist/legacy/cjs/index.common.js",
         "default": "./dist/esm/index.mjs"
-      },
-      "./dist/legacy/umd/index.umd.min.js"
+      }
     ]
   }
 }
