--- a/packages/icons/.gitignore
+++ b/packages/icons/.gitignore
@@ -22,3 +22,7 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+stats.html
+stats-widget-browser.html
+stats-test-widget-widget-browser.html
+stats-browser.html
