--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -9,7 +9,7 @@
   "web": "dist/browser/index.min.js",
   "umd": "dist/legacy/umd/index.umd.min.js",
   "unpkg": "dist/browser/index.min.js",
-  "module": "dist/esm/index.mjs",
+  "module": "dist/esm/index.js",
   "jsnext:main": "dist/esm/index.js",
   "src": "src/index.js",
   "files": [
