--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -59,7 +59,7 @@
     "@houlagins/locale": "1.0.0",
     "@houlagins/self-embedding-component": "1.0.17",
     "@scbd/sso-vue-plugin-scbd": "1.0.4",
-    "axios": "0.21.1",
+    "axios": "^0.21.1",
     "change-case": "4.1.2",
     "consola": "2.15.3",
     "core-js": "3.6.5",
@@ -81,8 +81,8 @@
     "postcss": "7.0.35",
     "postcss-loader": "6.1.0",
     "sass-loader": "10.1.0",
-    "vue-template-compiler": "2.6.11",
-    "vue": "2.6.11"
+    "vue": "2.6.11",
+    "vue-template-compiler": "2.6.11"
   },
   "description": "https://github.com/scbd/action-agenda-components/tree/master/packages/form#readme",
   "bugs": {
