change to english add css

--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -50,7 +50,8 @@
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint --fix",
     "release": "yarn publish --access=public --tag latest",
-    "link": "lerna link"
+    "link": "lerna link",
+    "clean-reinstall": "if test -f yarn.lock; then rm yarn.lock; fi && if test -d node_modules; then rm -rf node_modules; fi && yarn --force"
   },
   "dependencies": {
     "@action-agenda/cached-apis": "1.0.12",
